--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 	<h1>Web Experiments</h1>
+	<ul>
+		<li><a href="/webgl/model-viewer/gizmo.html">Gizmo</a></li>
+	</ul>
 </body>
 </html>
