Add repo subdirectory

--- a/webgl/model-viewer/gizmo.html
+++ b/webgl/model-viewer/gizmo.html
@@ -30,7 +30,7 @@
 	<body>
 		<model-viewer
 			style="width: 100vw; height: 100vh; height: -webkit-fill-available"
-			src="/files/gizmo.glb"
+			src="/web-experiments/files/gizmo.glb"
 			alt="Gizmo"
 			loading="eager" environment-image="neutral" autoplay=""
 			auto-rotate="" ar="" camera-controls=""
